--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</div>
 			<div class="l-section l-section-reverse color-background-first">
 				<div class="l-half l-center">
-			<img class="l-img l-img-witdh-fifty" src="./icons/3.png" alt="">
+			<img class="l-img" src="./icons/3.png" alt="">
 				</div>
 				<div class="l-half">
 					<div class="l-description l-img-pt">
@@ -42,12 +42,12 @@
 					</div>
 				</div>
 				<div class="l-half l-center">
-					<img class="l-img l-img-witdh-fifty" src="./icons/4.png" alt="">
+					<img class="l-img" src="./icons/4.png" alt="">
 				</div>
 			</div>
 			<div class="l-section l-section-reverse color-background-second">
 				<div class="l-half l-center">
-					<img class="l-img l-img-witdh-fifty" src="./icons/5.png" alt="">
+					<img class="l-img" src="./icons/5.png" alt="">
 				</div>
 				<div class="l-half">
 					<div class="l-description">
@@ -64,12 +64,12 @@
 					</div>
 				</div>
 				<div class="l-half l-center">
-					<img class="l-img l-img-witdh-fifty" src="./icons/6.png" alt="">
+					<img class="l-img" src="./icons/6.png" alt="">
 				</div>
 			</div>
 			<div class="l-section l-section-reverse color-background-first">
 				<div class="l-half l-center">
-					<img class="l-img l-img-witdh-fifty l-img-pt" src="./icons/7.png" alt="">
+					<img class="l-img l-img-pt" src="./icons/7.png" alt="">
 				</div>
 				<div class="l-half">
 					<div class="l-description">
